--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                     <p>I'd love to hear from you! Feel free to reach out to me for collaborations, suggestions, or just to say hi.</p>
                     <p>Email: <a href="mailto:yaminiravuri5@gmail.com">yaminiravuri@gmail.com</a></p>
                     <p>Follow me on social media:</p>
-                    <ul>
-                        <li><a href="https://www.facebook.com/ravuri.yamini?mibextid=ZbWKwL">FaceBook</a></li>
-                        <li><a href="https://www.instagram.com/yamini05_?igsh=YzdjankyY2prYW5u">Instagram</a></li>
-                        <li><a href="https://www.linkedin.com/in/ravuri-yamini-9b985b238?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Linkedin</a></li>
+                    <ul> 
+                        <li><a href="https://www.Facebook.com">FaceBook</a></li>
+                        <li><a href="https://www.instagram.com">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com">Linkedin</a></li>
                     </ul>
                 </td>
             </tr>
